asset/css/styles.css
html {
  height: 100%;
  background: linear-gradient(to bottom right, #4b7fc3, #5454b0);
}

body {
  font-family: Lato, sans-serif;
  color: #ffffff;
  margin: 48px;
}

header nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 80px;
}

nav ul {
  display: flex;
  list-style: none;
  justify-content: center;
  padding: 0;
  margin: 0;
}

nav ul li {
  margin-right: 24px;
}

nav a {
  text-decoration: none;
  color: white;
  font-weight: bold;
}

header nav div button {
  margin-left: 8px;
}

.nav-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.nav-links {
  flex: 1;
  display: flex;
  justify-content: center;
}

.nav-links ul {
  display: flex;
  justify-content: center;
  padding: 0;
  margin: 0 auto;
  list-style-type: none;
}

.nav-links l:not(:last-child) {
  margin-right: 24px;
}

.material-icons {
  vertical-align: middle;
  margin-right: 24px;
}

button {
  border: none;
  padding: 12px 20px;
  border-radius: 5px;
  cursor: pointer;
  font-weight: bold;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  font-size: 16px;
  line-height: 1;
}

.material-symbols-rounded {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  font-size: 24px;
  margin-right: 8px;
  vertical-align: middle;
}

header button:nth-of-type(1) {
  background: transparent;
  color: white;
}

header button:nth-of-type(2) {
  background: white;
  color: #1e3781;
}

main > section > * + * {
  margin-top: 24px;
}

main > section > button {
  background-color: #75fbb9;
  color: #1e3781;
}

h1 {
  line-height: 1.4;
  font-size: 32px;
}

p {
  line-height: 1.6;
  font-size: 16px;
}
/* abouts us section styles */
#about {
	display: flex;
	flex-direction: row-reverse;
	justify-content: space-between;
	align-items: center;
}
img{
	width: 400px;
}

